--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
       <div class="grade-contato">
         <div class="item-contato">
           <i class="fa-solid fa-envelope"></i>
-          <span>cfbucheb@gmail.com</span>
+          <span>cbucheb@sp.gov.br</span>
         </div>
         <div class="item-contato">
           <i class="fa-brands fa-whatsapp"></i>
@@ -385,3 +385,4 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
